--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8"/>
+    <link rel="stylesheet" href="./style.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
     <div id="app"></div>
